--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.28.1
-streamlit-webrtc==0.45.1
-SpeechRecognition==3.10.0
 numpy==1.24.3
-av==10.0.0
-aiortc==1.5.0
+SpeechRecognition==3.10.0
+aioice==0.9.0
+aiortc==1.3.2
+av==9.2.0
+streamlit-webrtc==0.47.1
