--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit==1.28.1
 numpy==1.24.3
 SpeechRecognition==3.10.0
-aioice==0.9.0
-aiortc==1.3.2
-av==9.2.0
 streamlit-webrtc==0.47.1
+setuptools>=69.0.2
+wheel>=0.42.0
